[gd_scene load_steps=3 format=3 uid="uid://kdjhlmnvtxfm"]

[ext_resource type="Script" path="res://MultiplayerScenes/MultiplayerController.gd" id="1_rf8e0"]
[ext_resource type="Texture2D" uid="uid://cq22og4jilpkc" path="res://1517788487669.jpeg" id="2_53xn8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rf8e0")

[node name="Logo" type="Label" parent="."]
layout_mode = 2
offset_left = 163.0
offset_top = 82.0
offset_right = 953.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 75
text = "Brig Balls Battle Royal"
horizontal_alignment = 1

[node name="Error" type="Window" parent="."]
initial_position = 2
size = Vector2i(405, 120)
visible = false

[node name="ErrorMessage" type="Label" parent="Error"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Error"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OkButton" type="Button" parent="Error"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.5
offset_right = 15.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Ok"

[node name="IPPrompt" type="Window" parent="."]
initial_position = 2
size = Vector2i(405, 120)
visible = false

[node name="Label" type="Label" parent="IPPrompt"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Ingresar direcci√≥n de IP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OkIPButton" type="Button" parent="IPPrompt"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -31.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 0
text = "Ok"

[node name="ConnectionTimeout" type="Timer" parent="IPPrompt"]
wait_time = 2.996
one_shot = true

[node name="IPInput" type="LineEdit" parent="IPPrompt"]
custom_minimum_size = Vector2(230.39, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5312
offset_top = -15.5
offset_right = 33.5312
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "localhost"

[node name="LogCont" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 407.0
offset_bottom = 158.0

[node name="RichTextLabel" type="RichTextLabel" parent="LogCont"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "assdaasds
"
bbcode_enabled = true
text = "Lector"

[node name="HBoxContainer" type="HBoxContainer" parent="LogCont"]
layout_mode = 2

[node name="NamePlayer" type="Window" parent="."]
initial_position = 2
size = Vector2i(420, 140)
visible = false

[node name="Player_Name" type="TextEdit" parent="NamePlayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -20.0
offset_right = 195.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Ingrese su nombre de usuario
"

[node name="SelectName" type="Button" parent="NamePlayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -40.0
offset_right = 39.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue
"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 2.0
offset_top = 6.0
offset_right = 1155.0
offset_bottom = 650.0
texture = ExtResource("2_53xn8")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 238.0
offset_right = 764.0
offset_bottom = 489.0

[node name="Host" type="Button" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
text = "Host
"

[node name="Join" type="Button" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
text = "Join
"

[node name="Play" type="Button" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
text = "Play
"

[node name="Join2" type="Button" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
text = "
"

[node name="Conf" type="Control" parent="."]
anchors_preset = 0
offset_left = 790.0
offset_top = 243.0
offset_right = 830.0
offset_bottom = 283.0

[node name="Objcount" type="HSlider" parent="Conf"]
layout_mode = 0
offset_right = 268.0
offset_bottom = 55.0
max_value = 1000.0
value = 400.0

[node name="ObjCountLabel" type="Label" parent="Conf"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Cantidad de objetos"

[node name="LiftableCategory" type="CheckBox" parent="Conf"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.2
anchor_top = 0.575
anchor_right = 8.2
anchor_bottom = 0.575
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0

[node name="ObjCountLabel2" type="Label" parent="Conf"]
offset_left = 241.0
offset_top = -9.0
offset_right = 406.0
offset_bottom = 17.0
text = "Solo ambiente?"

[connection signal="close_requested" from="Error" to="." method="_on_error_close_requested"]
[connection signal="go_back_requested" from="Error" to="." method="_on_error_close_requested"]
[connection signal="pressed" from="Error/OkButton" to="." method="_on_error_close_requested"]
[connection signal="close_requested" from="IPPrompt" to="." method="_on_ip_prompt_close_requested"]
[connection signal="go_back_requested" from="IPPrompt" to="." method="_on_ip_prompt_close_requested"]
[connection signal="pressed" from="IPPrompt/OkIPButton" to="." method="_on_ok_ip_button_pressed"]
[connection signal="timeout" from="IPPrompt/ConnectionTimeout" to="." method="_on_connection_timeout_timeout"]
[connection signal="text_submitted" from="IPPrompt/IPInput" to="." method="_on_ok_ip_button_pressed"]
[connection signal="button_down" from="NamePlayer/SelectName" to="." method="_on_select_name_button_down"]
[connection signal="button_down" from="Options/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Options/Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Options/Play" to="." method="_on_play_button_down"]
[connection signal="toggled" from="Conf/LiftableCategory" to="." method="_on_liftable_category_toggled"]
